[project]
name = "repl-nix-enlightenintled"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "flask-migrate>=4.0.7",
    "nltk>=3.9.1",
    "openai>=1.54.3",
    "pandas",
    "plotly>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "sqlalchemy>=2.0.36",
    "streamlit>=1.40.1",
]
